--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^6.3.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "fluent-ffmpeg": "^2.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
     "multer": "^1.4.3"
