별점 기능 추가

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "fluent-ffmpeg": "^2.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "react-star-ratings": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
